--- a/css/style.css
+++ b/css/style.css
@@ -468,7 +468,7 @@ a.banner-button2 {
 }
 
 .banner {
-    background: url("https://scontent.fccj6-1.fna.fbcdn.net/v/t39.30808-6/330843003_179574061513538_370648644970286099_n.jpg?_nc_cat=100&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=sqBnATsdieQAX9_EWzQ&_nc_ht=scontent.fccj6-1.fna&oh=00_AfCSLl-IRb__iFN_XJodt2pY_IdUx8lQyhWAEJK0LiuRKQ&oe=640C6E72") no-repeat center;
+    background: url("https://scontent.fcok10-2.fna.fbcdn.net/v/t39.30808-6/330843003_179574061513538_370648644970286099_n.jpg?_nc_cat=100&ccb=1-7&_nc_sid=174925&_nc_ohc=oDNB05J-crYAX9h5mXw&_nc_ht=scontent.fcok10-2.fna&oh=00_AfBxv8oLydEUvHOoeeey6t8T9mru7gMqrbv-1AZho1sQYQ&oe=648EF2F2") no-repeat center;
     background-size: cover;
     position:relative ;
 }
